@@ -22,7 +22,7 @@ PROJECT_NAME           = "VR Juggler Portable Runtime"
 # This could be handy for archiving the generated documentation or 
 # if some version control system is used.
 
-PROJECT_NUMBER         = 0.8.2
+PROJECT_NUMBER         = 0.8.3
 
 # The OUTPUT_DIRECTORY tag is used to specify the (relative or absolute) 
 # base path where the generated documentation will be put. 
