@@ -44,6 +44,8 @@
 
 #include <vpr/vprConfig.h>
 
+#include <string>
+#include <vector>
 #include <vpr/IO/Socket/SocketTypes.h>
 #include <vpr/IO/Socket/InetAddrBase.h>
 
@@ -222,6 +224,17 @@ public:
     //+          in the human-readable "dotted-decimal" notation.
     // ------------------------------------------------------------------------
     std::string getAddressString(void) const;
+
+    /**
+     * Returns the fully qualified hostname for this address.
+     */
+    std::string getHostname(void) const;
+
+    /**
+     * Returns the fully qualified primary hostname for this address and all
+     * known aliases.
+     */
+    std::vector<std::string> getHostnames(void) const;
 
     // ------------------------------------------------------------------------
     //: Overloaded assignment operator to ensure that assignments work
